--- a/src/index.css
+++ b/src/index.css
@@ -4,11 +4,16 @@
   box-sizing: border-box;
 }
 
+html, body, .container {
+  min-height: 100% !important;
+  height: 100%;
+}
+
 .container {
   font-family: 'Roboto', sans-serif;
   max-width: 500px;
   margin: 0 auto;
-  min-height: 100%;
+  height: 100%;
   background-color: #231900;
   color: #C7CCD9;
 }
@@ -19,54 +24,86 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 15px;
 }
 
 .title {
   font-size: 2em;
+  font-weight: 400;
 }
 
 .input-content {
   font-size: 0.8em;
   background-color: #BFB163;
   color: #0D020A;
+  padding: 20px 10px;
+}
+
+.service-container {
+  padding: 10px 30px;
+}
+
+.passphrase-container {
+  padding: 10px 30px;
+}
+
+.serv-inputbox, .phrase-inputbox {
+  border-radius: 2px;
+  border: 1px solid #979797;
+  background-color: rgba(255, 255, 255, 0.57);
+  font-size: 1.4em;
+  width: 100%;
+  height: 40px;
 }
 
 .output-content {
   background-color: #231900;
+  padding: 10px 20px;
 }
 
-h2 {
-  font-weight: lighter;
+.password-container {
+  font-size: 0.9em;
+  color: #BFB163;
+  padding: 30px;
 }
 
-.serv, .phrase {
-  border-radius: 2px;
-  border: 1px solid #979797;
-  background-color: rgba(255, 255, 255, 0.57);
+.pwd-inputbox {
+  font-weight: 400;
   font-size: 1em;
-  width: 100%;
-  height: 30px;
-}
-
-.service {
-  padding: 10px 30px;
-}
-
-.passphrase {
-  padding: 10px 30px;
-}
-
-.pwd {
-  font-size: 1.2em;
   border: 1px solid #BFB163;
   height: 50px;
-  width: 260px;
-  color: #BFB163;
+  width: 100%;
+  color: #E3DDBC;
   border-radius: 2px;
   background-color: #231900;
 }
 
-.password {
-  color: #BFB163;
+.settings-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   padding: 20px;
+}
+
+.btns {
+  display: grid;
+  grid-template-columns: 50px 50px 50px;
+  grid-gap: 20px;
+}
+
+.round-btn {
+  user-select: none;
+  cursor: pointer;
+  width: 50px;
+  height: 50px;
+  color: #BFB163;
+  border: 1px solid #BFB163;
+  background-color: #231900;
+  border-radius: 100%;
+  transition: background-color 0.3s ease-in-out;
+}
+
+.round-btn:hover {
+  color: #231900;
+  background-color: #BFB163;
 }
