--- a/src/index.css
+++ b/src/index.css
@@ -8,14 +8,15 @@ html,
 body {
   width: 100%;
   height: 100%;
+  min-height: 100vh;
   margin: 0;
   padding: 0;
+  min-width: 400px;
+  
 }
-
 .container {
-  width: auto;
+  width: 100%;
   height: inherit;
-  max-width: 100%;
   font-family: 'Roboto', sans-serif;
   margin: 0 auto;
   background-color: #313442;
@@ -37,6 +38,7 @@ body {
 
 .input-content,.output-content {
   font-size: 0.8em;
+  letter-spacing: 1.4px;
   color: #C7CCD9;
   display: block;
   padding: 20px 40px;
@@ -57,17 +59,23 @@ input{
   background-color:transparent; 
   border-bottom: 1px solid #767A8B;
   width: 100%;
-  font-size: 1em;
-  color: white;  
+  font-size: 1.3em;
+  color: #E8EAF0;  
   height: 7vh; 
+  letter-spacing: 1px;
+  font-weight: 300;
+  padding: 1%;
+  
 }
 
 
 .pwd-inputbox {
+  margin-top: 0.5%;
   background-color:transparent; 
-  font-weight: 300;
+  font-weight: 400;
   height: 5vh;
-  color: white;
+  color: #E8EAF0;
+  background-color: #767A8B;
 }
 
 .btn-c{
@@ -77,6 +85,7 @@ input{
   padding: 5%;
 }
 .copy-btn{
+  letter-spacing: 0;
   width: 40%;
   height: 8vh;
   display: flex;
@@ -139,3 +148,9 @@ input{
   width: 100%;
 }
 
+@media only screen and (max-width: 768px) {
+  .container{
+    height: auto;
+    max-width: 100%;
+  }
+}
