--- a/src/index.css
+++ b/src/index.css
@@ -7,98 +7,111 @@
 html,
 body {
   width: 100%;
-  height: 100%;
   min-height: 100vh;
   margin: 0;
   padding: 0;
   min-width: 400px;
-  
+  height: 100%;
+  overflow: hidden;
 }
+
 .container {
   width: 100%;
+  min-height: 100vh;
   height: inherit;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   margin: 0 auto;
   background-color: #313442;
 }
 
 .title-banner {
   text-align: center;
-  color: #C7CCD9;
-  height: 30vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  color: #c7ccd9;
+  padding: 8vh 0;
+  /* border: 1px solid pink; */
+}
+
+.github-ribbon {
+  position: absolute;
+  top: 0;
+  left: 0;
+  border: 0;
+  float: left;
 }
 
 .title {
   font-size: 3em;
-  font-weight: 400;
+  font-weight: 100;
 }
 
-.input-content,.output-content {
+.input-content,
+.output-content {
   font-size: 0.8em;
   letter-spacing: 1.4px;
-  color: #C7CCD9;
+  color: #c7ccd9;
   display: block;
-  padding: 20px 40px;
+  /* border: 1px solid red; */
 }
 
-.service-container  , .passphrase-container, .password-container {
-/* border: 1px solid red; */
-padding: 2%;
-text-transform: uppercase;
-width: 100%;
+.service-container,
+.passphrase-container,
+.password-container {
+  padding: 2%;
+  text-transform: uppercase;
+  width: 60%;
+  margin: 0 auto;
 }
 
-input{
+input {
   display: block;
   border: none;
 }
-.serv-inputbox, .phrase-inputbox,.pwd-inputbox {
-  background-color:transparent; 
-  border-bottom: 1px solid #767A8B;
+
+.serv-inputbox,
+.phrase-inputbox,
+.pwd-inputbox {
+  background-color: transparent;
+  border-bottom: 1px solid #767a8b;
   width: 100%;
   font-size: 1.3em;
-  color: #E8EAF0;  
-  height: 7vh; 
+  color: #e8eaf0;
+  height: 6vh;
   letter-spacing: 1px;
   font-weight: 300;
   padding: 1%;
-  
+  margin-top: 1%;
 }
-
 
 .pwd-inputbox {
-  margin-top: 0.5%;
-  background-color:transparent; 
+  margin-top: 1%;
+  background-color: transparent;
   font-weight: 400;
   height: 5vh;
-  color: #E8EAF0;
-  background-color: #767A8B;
+  color: #e8eaf0;
+  background-color: #767a8b;
 }
 
-.btn-c{
+.btn-c {
   display: flex;
   justify-content: center;
   align-content: center;
-  padding: 5%;
+  padding: 3%;
 }
-.copy-btn{
+.copy-btn {
   letter-spacing: 0;
   width: 40%;
-  height: 8vh;
+  height: 6vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  border-radius: 4px;
+  border-radius: 2px;
   color: #313442;
-  background-color: #E8EAF0;
+  background-color: #e8eaf0;
   cursor: pointer;
 }
 
-.copy-btn:active{
-  background-color: white;  
+.copy-btn:active {
+  background-color: white;
 }
 .col-1 {
   width: 8.33%;
@@ -149,8 +162,12 @@ input{
 }
 
 @media only screen and (max-width: 768px) {
-  .container{
+  .container {
     height: auto;
-    max-width: 100%;
+    min-width: 100%;
+  }
+
+  body {
+    font-size: 0.8em;
   }
 }
