--- a/src/index.css
+++ b/src/index.css
@@ -97,13 +97,12 @@ input {
   align-content: center;
   padding: 10vh 0;
 }
+
 .copy-btn {
+  font-size: 1em;
   letter-spacing: 0;
-  width: 12em;
-  height: 6vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  width: 12%;
+  height: 60px;
   border-radius: 2px;
   color: #313442;
   background-color: #e8eaf0;
