--- a/src/index.css
+++ b/src/index.css
@@ -7,18 +7,16 @@
 html,
 body {
   width: 100%;
-  min-height: 100vh;
+  height: 100vh;
   margin: 0;
   padding: 0;
   min-width: 400px;
-  height: 100%;
   overflow: hidden;
 }
 
 .container {
   width: 100%;
-  min-height: 100vh;
-  height: inherit;
+  height: 100%;
   font-family: "Roboto", sans-serif;
   margin: 0 auto;
   background-color: #313442;
@@ -58,7 +56,7 @@ body {
 .password-container {
   padding: 2vh 0;
   text-transform: uppercase;
-  width: 60%;
+  width: 50%;
   margin: 0 auto;
 }
 
@@ -75,7 +73,7 @@ input {
   width: 100%;
   font-size: 1.3em;
   color: #e8eaf0;
-  height: 6vh;
+  height: 8vh;
   letter-spacing: 1px;
   font-weight: 300;
   padding: 1%;
@@ -103,8 +101,8 @@ input {
   font-size: 1em;
   letter-spacing: 0;
   width: auto;
-  padding: 2% 4%;
-
+  height: 50px;
+  padding: 0 20px;
   border-radius: 2px;
   color: #313442;
   background-color: #e8eaf0;
@@ -114,6 +112,14 @@ input {
 .copy-btn:active {
   background-color: white;
 }
+.show {
+  float: right;
+}
+.custom-checkbox {
+  width: 50px;  
+  display: inline-block;  
+}
+
 .col-1 {
   width: 8.33%;
 }
@@ -170,5 +176,11 @@ input {
 
   body {
     font-size: 0.8em;
+  }
+
+.service-container,
+.passphrase-container,
+.password-container {
+  width: 80%;
   }
 }
