--- a/src/index.css
+++ b/src/index.css
@@ -7,11 +7,11 @@
 html,
 body {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   margin: 0;
   padding: 0;
   min-width: 400px;
-  overflow: hidden;
+  background-color: #313442;
 }
 
 .container {
@@ -54,7 +54,7 @@ body {
 .service-container,
 .passphrase-container,
 .password-container {
-  padding: 2vh 0;
+  padding: 20px 0;
   text-transform: uppercase;
   width: 50%;
   margin: 0 auto;
@@ -73,7 +73,6 @@ input {
   width: 100%;
   font-size: 1.3em;
   color: #e8eaf0;
-  height: 8vh;
   letter-spacing: 1px;
   font-weight: 300;
   padding: 1%;
@@ -84,7 +83,6 @@ input {
   margin-top: 1%;
   background-color: transparent;
   font-weight: 400;
-  height: 5vh;
   color: #e8eaf0;
   background-color: #767a8b;
 }
