--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+:root {
+  --background: #031826;
+  --title-color: #FDFEFE;
+  --label-color: #FFFFFF;
+}
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -7,26 +12,27 @@
 html,
 body {
   width: 100%;
-  min-height: 100vh;
+  height:100%;
   margin: 0;
   padding: 0;
+  min-height: 100vh;
   min-width: 400px;
-  background-color: #313442;
+  font-size: 16px;
+  background: linear-gradient(90deg, rgba(5, 19, 28, 0.8) 0%, rgba(3, 24, 38, 0.8) 100%), url(assets/square-dark.webp);
+  font-family: "Lexend", sans-serif;
+  font-optical-sizing: auto;
 }
-
 .container {
+  height: 100vh;
+  min-height: inherit;
   width: 100%;
-  height: 100%;
-  font-family: "Roboto", sans-serif;
-  margin: 0 auto;
-  background-color: #313442;
+  font-family: "Lexend", sans-serif;
 }
 
 .title-banner {
   text-align: center;
-  color: #c7ccd9;
+  color: var(--title-color);
   padding: 10vh 0;
-  /* border: 1px solid pink; */
 }
 
 .github-ribbon {
@@ -39,16 +45,15 @@ body {
 
 .title {
   font-size: 3em;
-  font-weight: 100;
+  font-weight: 600;
 }
 
 .input-content,
 .output-content {
-  font-size: 0.8em;
+  font-size: 1em;
   letter-spacing: 1.4px;
-  color: #c7ccd9;
+  color: var(--label-color);
   display: block;
-  /* border: 1px solid red; */
 }
 
 .service-container,
@@ -56,12 +61,16 @@ body {
 .password-container {
   padding: 20px 0;
   text-transform: uppercase;
-  width: 50%;
+  max-width: 600px;
   margin: 0 auto;
+}
+.password-container {
+  padding-top: 40px;
 }
 
 input {
   display: block;
+  background: rgb(16, 134, 144) ;
   border: none;
 }
 
@@ -69,8 +78,10 @@ input {
 .phrase-inputbox,
 .pwd-inputbox {
   background-color: transparent;
-  border-bottom: 1px solid #767a8b;
+  border: 2px solid #767a8b;
+  border-radius: 4px;
   width: 100%;
+  min-height: 40px;
   font-size: 1.3em;
   color: #e8eaf0;
   letter-spacing: 1px;
@@ -112,10 +123,19 @@ input {
 }
 .show {
   float: right;
+  vertical-align: middle;
+  margin-top: 4px;
+  margin-bottom: 4px;
+}
+.show label {
+  cursor: pointer;
 }
 .custom-checkbox {
-  width: 50px;  
+  width: 20px;  
+  height: 20px;
   display: inline-block;  
+  margin: 0;
+  vertical-align: text-bottom;
 }
 
 .col-1 {
