--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
+  font-family: "Lexend", sans-serif;
 }
 
 html,
@@ -19,7 +20,6 @@ body {
   min-width: 400px;
   font-size: 16px;
   background: linear-gradient(90deg, rgba(5, 19, 28, 0.8) 0%, rgba(3, 24, 38, 0.8) 100%), url(assets/square-dark.webp);
-  font-family: "Lexend", sans-serif;
   font-optical-sizing: auto;
 }
 .container {
@@ -70,14 +70,13 @@ body {
 
 input {
   display: block;
-  background: rgb(16, 134, 144) ;
+  background: hsl(208, 50%, 90%);
   border: none;
 }
 
 .serv-inputbox,
 .phrase-inputbox,
 .pwd-inputbox {
-  background-color: transparent;
   border: 2px solid #767a8b;
   border-radius: 4px;
   width: 100%;
